src/objects/Molecule__c.object
<CustomObject>
    <fields>
        <fullName>Display_Nickname__c</fullName>
        <description>Nickname to be used for Executive Dashboard if Molecule is a Priority Molecule</description>
        <label>Display Nickname</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Firewall_Message__c</fullName>
        <label>Firewall Message</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Firewalled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Firewalled?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Registered_in_the_EU__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Registered in the EU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>In Research</fullName>
                </value>
                <value>
                    <fullName>In Development (Clinical Trials)</fullName>
                </value>
                <value>
                    <fullName>Completed Clinical Trials</fullName>
                </value>
                <value>
                    <fullName>Submitted - waiting for NDA approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Therapeutic_Area_Primary__c</fullName>
        <description>Disease state that is involved in the research project or would be served by the data asset</description>
        <inlineHelpText>Disease state that is involved in the research study or would be served by the data asset</inlineHelpText>
        <label>Therapeutic Area (Primary)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Central Nervous System</fullName>
                </value>
                <value>
                    <fullName>Cardiovascular and Metabolic</fullName>
                </value>
                <value>
                    <fullName>Gastroenterology</fullName>
                </value>
                <value>
                    <fullName>Oncology</fullName>
                </value>
                <value>
                    <fullName>Vaccines</fullName>
                </value>
                <value>
                    <fullName>Non-Therapeutic Area Specific</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Compound</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Therapeutic_Area_Primary__c</columns>
        <columns>Status__c</columns>
        <columns>Firewalled__c</columns>
        <columns>Display_Nickname__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Firewalled_Molecules</fullName>
        <columns>NAME</columns>
        <columns>Firewalled__c</columns>
        <columns>Therapeutic_Area_Primary__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Firewalled__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Firewalled Molecules</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Molecule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Compounds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Firewall_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>Firewalled__c == TRUE &amp;&amp; Firewall_Message__c == NULL</errorConditionFormula>
        <errorMessage>Please Enter the Firewall Message.</errorMessage>
    </validationRules>
</CustomObject>